# cookie-demo

./: CMakeLists.txt  README.md
include/: cookie_manager.h  http_common.h
src/: CMakeLists.txt  client.cpp  server.cpp
